[workspace]
members = ["keygen", "patch", "sign"]
resolver = "2"


[workspace.package]
version = "0.1.0"
authors = ["Kore Ledger, S.L.<info@kore-ledger.com>"]
edition = "2021"
description = "Kore Client official implementation"
readme = "./README.md"
homepage = "https://kore-ledger.com"
repository = "https://github.com/kore-ledger/kore-client"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "kore", "sustainability"]
rust-version = "1.73"

[workspace.dependencies]
kore-base = { git = "https://github.com/kore-ledger/kore-base", version = "0.5.12", features = ["all"], branch = "main" }
clap = { version = "4.5.4", features = ["string", "derive"] }
hex = "0.4.3"
hex-literal = "0.4.1"
libp2p = { version = "0.53.2", default-features = false }
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0.192", default-features = false }
json-patch = "2"
thiserror = "1"
borsh = "1.2"
pkcs8 = { version = "0.10.2", features = ["encryption"]}
k256 = "0.13.3"
der = "0.7.9"
elliptic-curve = "0.13.8"
ed25519 = {version = "2.2.3", default-features = false}
tempfile = "3.2.0"
wasmtime = "20.0.2"
