[package]
name = "control"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = {version = "0.5.2", features = ["trace", "metrics", "cors"]}
tracing = "0.1.40"
log = "0.4.21"
log4rs = "1.3.0"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"]}
async-trait = "0.1.79"
futures-util = "0.3"