[package]
name = "kore-sign"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
kore-base = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
serde_json = { workspace = true }
